--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
                 const videoFiles = ["" ,"" ,""];
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
-                const audioFiles = ["Про-мене_1.mp3" ,"Блез-Паскаль_1.mp3" ,"Калькулятор-Паскаля_1.mp3"];
+                const audioFiles = ["Me.mp3" ,"Paskal.mp3" ,"calculator.mp3"];
                 // Масив опцій повтору аудіо та відео контенту, по дефолту для всіх буде false
                 const repeatOptions = ["false" ,"false" ,"false"];
   
