--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <head>
@@ -162,11 +163,11 @@
                 // Масив файлів моделей, якщо немає моделі буде додано порожній рядок
                 const modelFiles = ["" ,"" ,""];
                 // Масив файлів зображень, якщо немає зображення буде додано також порожній рядок
-                const imageFiles = ["me.jpeg" ,"Paskal.jpg" ,"calculator.jpg"];
+                const imageFiles = ["me.jpeg" ,"calculator.jpg" ,"Paskal.jpg"];
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
                 const videoFiles = ["" ,"" ,""];
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
-                const audioFiles = ["Me.mp3" ,"Paskal.mp3" ,"calculator.mp3"];
+                const audioFiles = ["Me.mp3" ,"Calculator.mp3" ,"paskal.mp3"];
                 // Масив опцій повтору аудіо та відео контенту, по дефолту для всіх буде false
                 const repeatOptions = ["false" ,"false" ,"false"];
   
